# unetsockets

./: README.md
c/: unet.c
js/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
js/docs/: readme.md
js/examples/esm/: 2-node-des.groovy  nodeA.html  nodeB.html  readme.md  run-example.sh  unet.js
js/src/: unet.js  unetsocket.js  unetutils.js
js/test/: browser-test.cjs
js/test/spec/: create-spec.cjs  unet.spec.js
js/tests/: browser-test.cjs  get-unet.sh  sim.sh
js/tests/spec/: create-spec.cjs  unet.spec.js
python/: .gitignore  Makefile  README.md  pyproject.toml  rxdata.py  setup.py  txdata.py
python/docs/: generate_api_docs.py  index.md  installation.md  quickstart.md  readme.md
python/docs/api/: constants.md  index.md  messages.md  unetsocket.md  utilities.md
python/src/unetpy/: __about__.py  __init__.py  constants.py  messages.py  socket.py  unetutils.py
python/src/unetpy/cli/: __init__.py  rx.py  tx.py
python/test/: test.py
python/tests/: .gitignore  conftest.py  get-unet.sh  sim.sh  test_socket.py  test_utils.py
python/unetpy/: __init__.py
