[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unetpy"
version = "4.0.0"
description = "UnetSocket: A high-level socket interface for UnetStack in Python"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [{name = "Chinmay Pendharkar", email = "chinmay@subnero.com"}]
keywords = ["unet", "modem", "underwater", "communications"]
requires-python = ">=3.9"
dependencies = [
    "fjagepy>=2.0.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8"
]

[project.urls]
Homepage = "https://github.com/org-arl/unetsockets/tree/master/python"
Documentation = "https://unetstack.net/"
Source = "https://github.com/org-arl/unetsockets"
Issues = "https://github.com/org-arl/unetsockets/issues"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]